Moved isotope to application.js because of layout issue

--- a/app/assets/stylesheets/_projects.scss
+++ b/app/assets/stylesheets/_projects.scss
@@ -62,7 +62,7 @@
 	width: 24.5%; height: auto;
 	padding: 20px;
 	@include bp(1600){ width: 33%; }
-	@include bp(1300){ width: 50%; }
+	@include bp(1300){ width: 49%; }
 	@include bp(700){ width: 95%; }
 }
 
@@ -349,14 +349,19 @@
 	@include align-content(center);
 	@include align-items(center);
 	position: relative !important;
-	height: 80% !important;
+	height: 90% !important;
 	width: 100% !important;
 	bottom: 0 !important;
 	img {
-		max-width: 80% !important;
-		height: auto !important;
+		position: relative;
+		display: block;
+		height: auto !important; max-height: 80% !important;
+		max-width: 100% !important; width: auto !important;
+		@include bp(1200) {
+		   max-height: 100% !important; 
+		}
 		@include bp(charlie) {
-			max-width: 95% !important;
+			height: auto !important; max-height: none !important; width: 90% !important;
 		}
 	}
 }
